--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,6 @@
-name: CI
+name: Tests
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
+on: [push, pull_request]  
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -23,11 +16,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest
 
     - name: Run tests
-      run: |
-        pytest
-
+      run: pytest
